# git-repo-rewriter

./: .gitignore  README.md  pyproject.toml
documentation/json/examples/: sample_rewriter_file.json
src/git-repo-rewriter/: __init__.py  process_json_file.py
src/git_repo_rewriter/: process_json_file.py  rewriter_utilities.py
